refactor: 프론트앤드 작업하면서 발생하였던 버그 전체 수정
프론트앤드 작업을 진행하면서 발생하였던 백앤드 관련 버그 전체 수정